fix: Overflow issue of aside

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
         "sidebar header header"
         "sidebar nav nav"
         "sidebar article aside";
-    grid-template-columns: min-content 1fr clamp(200px, 20vw, 300px);
+    grid-template-columns: min-content 1fr min-content;
     grid-template-rows: fit-content fit-content fit-content;
 }
 
@@ -173,7 +173,7 @@ article {
 
     .projectsGrid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
         grid-auto-rows: fit-content;
         gap: 20px;
     }
